<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>com.solvd</groupId>
	<artifactId>carina-demo</artifactId>
	<version>1.0</version>
	<packaging>jar</packaging>
	<name>“carina-demo”</name>
	<url>https://github.com/JuanDAlzateR-Solvd/web-automation-pelp</url>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<carina-core_version>1.1.3</carina-core_version>
		<carina-dataprovider.version>1.1.3</carina-dataprovider.version>
		<carina-api.version>1.1.3</carina-api.version>
		<carina-aws-s3.version>1.1.4</carina-aws-s3.version>
		<carina-azure.version>1.1.4</carina-azure.version>
		<carina-appcenter.version>1.1.4</carina-appcenter.version>
		<java.version>21</java.version>
		<zebrunner-agent.version>1.9.6</zebrunner-agent.version>
		<suite>helloWorld</suite>
	</properties>

	<repositories>
		<!-- Uncomment only for testing any SNAPSHOT version of carina or zebrunner agent! -->
		<!--repository>
			<id>zebrunner_snapshots</id>
			<name>zebrunner Snapshots</name>
			<url>https://nexus.zebrunner.dev/repository/ce-snapshots/</url>
			<releases>
				<enabled>false</enabled>
			</releases>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
		</repository-->
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-core</artifactId>
			<version>${carina-core_version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-dataprovider</artifactId>
			<version>${carina-dataprovider.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-api</artifactId>
			<version>${carina-api.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-aws-s3</artifactId>
			<version>${carina-aws-s3.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-azure</artifactId>
			<version>${carina-azure.version}</version>
		</dependency>
		<dependency>
			<groupId>com.zebrunner</groupId>
			<artifactId>carina-appcenter</artifactId>
			<version>${carina-appcenter.version}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>1.7.30</version>
		</dependency>
		<!-- Log4j2 -->
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-api</artifactId>
			<version>2.17.1</version>
		</dependency>
		<dependency>
			<groupId>org.apache.logging.log4j</groupId>
			<artifactId>log4j-core</artifactId>
			<version>2.17.1</version>
		</dependency>

		<dependency>
			<!--we need it to reuse benefits of zebrunner testng agent for webdriver
				sesssion(s) declaration -->
			<groupId>net.bytebuddy</groupId>
			<artifactId>byte-buddy</artifactId>
			<version>1.12.18</version>
		</dependency>
		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.5.6</version>
		</dependency>
		<dependency>
			<groupId>org.postgresql</groupId>
			<artifactId>postgresql</artifactId>
			<version>42.5.3</version>
		</dependency>


	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.11.0</version>
				<configuration>
					<release>${java.version}</release>
					<compilerArgs>
						<arg>-parameters</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.6.0</version>
				<executions>
					<execution>
						<id>copy</id>
						<phase>initialize</phase>
						<goals>
							<goal>copy</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<artifactItems>
						<artifactItem>
							<groupId>com.zebrunner</groupId>
							<artifactId>agent-core</artifactId>
							<version>${zebrunner-agent.version}</version>
							<outputDirectory>${project.build.directory}/agent</outputDirectory>
							<destFileName>zebrunner-agent.jar</destFileName>
						</artifactItem>
					</artifactItems>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.1.0</version>
				<configuration>
					<argLine>-javaagent:${project.build.directory}/agent/zebrunner-agent.jar</argLine>
					<useSystemClassLoader>false</useSystemClassLoader>
					<suiteXmlFiles>
						<suiteXmlFile>${project.build.directory}/test-classes/testng_suites/${suite}.xml</suiteXmlFile>
					</suiteXmlFiles>
				</configuration>
			</plugin>
		</plugins>
	</build>
</project>